gitops/apps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: infra
  namespace: infra
  annotations:
    kubernetes.io/ingress.class: gce
    ingress.gcp.kubernetes.io/pre-shared-cert: cd
    kubernetes.io/ingress.global-static-ip-name: cd-maap

spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80
  rules:
    - host: cd.fobos.app
      http:
        paths:
          - path: /*
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
